New start with TypeScript

--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "clean": "rimraf public",
+    "clean": "gatsby clean && rimraf public",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "dev": "gatsby develop",
     "format": "prettier --write \"src/**/*.{ts,tsx,md}\"",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "start": "npm run dev",
-    "test": "npm run type-check && npm run lint",
+    "start": "yarn dev",
+    "test": "yarn type-check && yarn lint",
     "type-check": "tsc"
   },
   "engines": {
@@ -37,9 +37,9 @@
     "gatsby-plugin-typescript": "^2.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
     "gatsby-remark-images": "^3.1.0",
-    "gatsby-remark-prismjs": "^3.3.0",
     "gatsby-remark-responsive-iframe": "^2.2.0",
     "gatsby-remark-smartypants": "^2.1.0",
+    "gatsby-remark-vscode": "^1.0.6",
     "gatsby-source-filesystem": "^2.1.0",
     "gatsby-transformer-json": "^2.2.0",
     "gatsby-transformer-remark": "^2.5.0",
@@ -61,7 +61,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "@typescript-eslint/parser": "^1.10.2",
+    "@typescript-eslint/parser": "^1.12.0",
     "eslint": "^6.0.0",
     "eslint-config-blvd": "^0.1.1",
     "eslint-config-prettier": "^5.0.0",
