--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,11 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": ["eslint-config-blvd/react", "prettier/@typescript-eslint", "prettier/react", "plugin:prettier/recommended"],
+  "extends": [
+    "eslint-config-blvd/react",
+    "prettier/@typescript-eslint",
+    "prettier/react",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
@@ -15,12 +20,15 @@
   },
   "rules": {
     "max-len": ["error", { "code": 140, "ignoreUrls": true }],
-    "import/prefer-default-export": false,
-    "@typescript-eslint/explicit-function-return-type": false,
+    "import/prefer-default-export": 0,
+    "@typescript-eslint/explicit-function-return-type": 0,
     "react/no-unescaped-entities": [
       "error",
       {
-        "forbid": [{ "char": ">", "alternatives": ["&gt;"] }, { "char": "}", "alternatives": "&#125;" }]
+        "forbid": [
+          { "char": ">", "alternatives": ["&gt;"] },
+          { "char": "}", "alternatives": ["&#125;"] }
+        ]
       }
     ]
   }
