--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
 language: node_js
 node_js:
-  - "stable"
+  - "10"
 cache:
   directories:
     - node_modules
-deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  local_dir: public
-  keep-history: true
-  on:
-    branch: master
+branches:
+  only:
+    - master
 before_script:
   - "npm i -g yarn"
   - "yarn"
