--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-utterances": "^0.6.4",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
