--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -18,4 +18,4 @@ jobs:
         yarn deploy
       env:
         GH_PAGES_BRANCH: master
-        GH_PAGES_REPO: https://github.com/lacti/lacti.github.io
+        GH_PAGES_REPO: ${{ secrets.GH_PAGES_REPO }}
