--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,18 +6,23 @@ jobs:
     steps:
       - name: "Clone this repository"
         uses: actions/checkout@v1
-      - name: "Pull a docker image"
-        run: |
-          docker pull lacti/blog-build-env
+
+      #  https://github.com/actions/cache/blob/master/examples.md#node---yarn
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: "Build and deploy"
         run: |
-          docker run \
-            -e "GH_PAGES_REPO=${GH_PAGES_REPO}" \
-            -e "GH_PAGES_BRANCH=${GH_PAGES_BRANCH}" \
-            -e "USER_EMAIL=${USER_EMAIL}" \
-            -e "USER_NAME=${USER_NAME}" \
-            -v $PWD:/blog\
-            lacti/blog-build-env
+          git config user.email "${USER_EMAIL}"
+          git config user.name "${USER_NAME}"
+          yarn deploy
         env:
           GH_PAGES_BRANCH: master
           GH_PAGES_REPO: ${{ secrets.GH_PAGES_REPO }}
