--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           git config user.email "${USER_EMAIL}"
           git config user.name "${USER_NAME}"
-          yarn deploy
+          yarn && yarn deploy
         env:
           GH_PAGES_BRANCH: master
           GH_PAGES_REPO: ${{ secrets.GH_PAGES_REPO }}
