--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-styled-components": "^1.10.1",
     "classnames": "^2.2.6",
     "gatsby": "^2.10.0",
+    "gatsby-embedder-excalidraw": "^1.0.3",
     "gatsby-image": "^2.2.1",
     "gatsby-plugin-canonical-urls": "^2.1.0",
     "gatsby-plugin-emotion": "^4.1.0",
@@ -37,6 +38,7 @@
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-typescript": "^2.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
+    "gatsby-remark-embedder": "^2.1.1",
     "gatsby-remark-images": "^3.1.0",
     "gatsby-remark-responsive-iframe": "^2.2.0",
     "gatsby-remark-smartypants": "^2.1.0",
@@ -69,6 +71,7 @@
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "gh-pages": "^2.0.1",
+    "npm-check-updates": "^7.0.1",
     "prettier": "^1.18.2",
     "rimraf": "^2.6.3"
   }
