--- a/package.json
+++ b/package.json
@@ -25,54 +25,54 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.10",
-    "@emotion/styled": "^10.0.12",
-    "babel-plugin-styled-components": "^1.10.1",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "classnames": "^2.2.6",
-    "gatsby": "^2.10.0",
-    "gatsby-embedder-excalidraw": "^1.0.3",
-    "gatsby-image": "^2.2.1",
-    "gatsby-plugin-canonical-urls": "^2.1.0",
-    "gatsby-plugin-emotion": "^4.1.0",
-    "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-sharp": "^2.2.1",
-    "gatsby-plugin-typescript": "^2.1.0",
-    "gatsby-remark-copy-linked-files": "^2.1.0",
-    "gatsby-remark-embedder": "^2.1.1",
-    "gatsby-remark-images": "^3.1.0",
-    "gatsby-remark-responsive-iframe": "^2.2.0",
-    "gatsby-remark-smartypants": "^2.1.0",
-    "gatsby-remark-vscode": "^1.0.6",
-    "gatsby-source-filesystem": "^2.1.0",
-    "gatsby-transformer-json": "^2.2.0",
-    "gatsby-transformer-remark": "^2.5.0",
-    "gatsby-transformer-sharp": "^2.2.0",
-    "modern-normalize": "^0.5.0",
+    "gatsby": "^2.29.3",
+    "gatsby-embedder-excalidraw": "^1.1.1",
+    "gatsby-image": "^2.8.0",
+    "gatsby-plugin-canonical-urls": "^2.7.0",
+    "gatsby-plugin-emotion": "^5.1.0",
+    "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-sharp": "^2.11.2",
+    "gatsby-plugin-typescript": "^2.9.0",
+    "gatsby-remark-copy-linked-files": "^2.7.0",
+    "gatsby-remark-embedder": "^4.1.0",
+    "gatsby-remark-images": "^3.8.1",
+    "gatsby-remark-responsive-iframe": "^2.8.0",
+    "gatsby-remark-smartypants": "^2.7.0",
+    "gatsby-remark-vscode": "^3.2.0",
+    "gatsby-source-filesystem": "^2.8.1",
+    "gatsby-transformer-json": "^2.8.0",
+    "gatsby-transformer-remark": "^2.13.1",
+    "gatsby-transformer-sharp": "^2.9.0",
+    "modern-normalize": "^1.0.0",
     "normalize.css": "^8.0.1",
-    "polished": "^3.4.1",
-    "prism-themes": "^1.1.0",
-    "prismjs": "^1.16.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
+    "polished": "^4.0.5",
+    "prism-themes": "^1.5.0",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-utterances": "^0.6.4",
-    "typescript": "^3.5.2"
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.8",
-    "@types/node": "^12.0.10",
-    "@types/react": "^16.8.22",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-helmet": "^5.0.8",
-    "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "@typescript-eslint/parser": "^1.12.0",
-    "eslint": "^6.0.0",
-    "eslint-config-blvd": "^0.1.1",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "gh-pages": "^2.0.1",
-    "npm-check-updates": "^7.0.1",
-    "prettier": "^1.18.2",
-    "rimraf": "^2.6.3"
+    "@types/classnames": "^2.2.11",
+    "@types/node": "^14.14.19",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.17.0",
+    "eslint-config-blvd": "^1.1.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "gh-pages": "^3.1.0",
+    "npm-check-updates": "^10.2.5",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2"
   }
 }
