--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-config-blvd": "^1.1.1",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
+    "gatsby-plugin-sitemap": "^3.1.0",
     "gh-pages": "^3.1.0",
     "npm-check-updates": "^10.2.5",
     "prettier": "^2.2.1",
